# scrapy-spiders-1

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docs/: README.md
docs/config_examples/: equity_site_conf_test.json  github_users_config.json  no_url_test.json  reddit_comments_conf_test.json  reddit_search_conf_test.json  reddit_test_conf.json  twitter_conf_test.json
src/: no_url_test.json  runner.py  scrapy.cfg
src/agblox/: __init__.py  items.py  middlewares.py  pipelines.py  policy.py  settings.py
src/agblox/spiders/: __init__.py  accesswire.py  agfax.py  agupdate.py  arstechnica.py  babypips.py  beefmagazine.py  benzinga.py  bgr.py  businesswire.py  canadiancattleman.py  cnbc.py  cnet.py  cnn.py  (+62 more)
src/scripts/: add_crypto_influencers_in_data_sources.py  delete_non_english_reddit_texts.py
tests/: conftest.py  test_agfax.py  test_agriculturecom_corn.py  test_agriculturecom_crop_markets.py  test_agriculturecom_soy.py  test_agriculturecom_wheat.py  test_agupdate.py  test_babypips.py  test_beefmagazine.py  test_benzinga.py  test_businesswire.py  test_canadiancattleman.py  test_cnbc.py  test_cropwatch.py  test_dailyfx.py  test_drovers.py  test_farmdocdaily.py  test_fieldcropnews.py  test_fisker.py  test_foodbusinessnetwork.py  test_fool.py  test_forex_empire.py  test_forexworld.py  test_fxstreet.py  test_growerspoint.py  test_gurufocus.py  test_ilcorn.py  test_insideev.py  test_investing_com.py  test_investopedia.py  test_investor_waitr.py  test_investorplace.py  test_iowacorn.py  test_items.py  test_kycorn.py  test_marketbeat.py  test_marketscreener.py  test_marketwatch.py  test_moneycontrol.py  test_morningstar.py  (+23 more)
(+272 files in other folders)
